src/test/deca/syntax/invalid/wrong-geq-sign.synt
wrong-geq-sign.deca:14:
